public/css/style.css
/* global selector */
* {
	font-family: "Red Hat Display", sans-serif;
	font-size: 18px;
	font-weight: 400;
	transition: 0.2s;
	margin: 0;
}

.navbar {
	list-style-type: none;
	padding: 20px;
	margin: 0;
	background-color: #231010;
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	align-items: center;
	justify-content: space-between;
	height: 1%;
	width: 100vw;
}

.navbar li {
	padding: 10px;
	display: inline;
}

.navbar li p {
	padding-top: 0px;
	padding-bottom: 50px;
	color: white;
	display: inline;
	font-size: large;
}

.navbar ul {
	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
	flex: 1;
	justify-content: flex-end;
	align-items: center;
}

.nav-header {
	color: white;
	font-size: xx-large;
	padding: 20px;
	display: flex;
	flex-direction: row;
	flex: 1;
}

.nav-link {
	color: white;
	font-size: xx-large;
	padding: 20px;
	text-decoration: none;
	color: white;
}

.nav-link:hover {
	text-decoration: underline;
	color: aqua;
}

.link {
	text-decoration: none;
	color: white;
}

.link:hover {
	text-decoration: underline;
	color: aqua;
}

.btn-no-style {
	text-decoration: none;
	color: white;
	border: none;
	background-color: transparent;
}

.btn-no-style:hover {
	text-decoration: underline;
	color: aqua;
	cursor: pointer;
}

.container {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.card {
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
	transition: 0.8s;
	padding: 20px;
	width: 75vw;
	display: flex;
	flex-direction: column;
	margin: 5px;
}

.card:hover {
	border-radius: 15px;
	background-color: #231010;
	color: white;
}

.post-card {
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
	transition: 0.8s;
	padding: 20px;
	width: 75vw;
	display: flex;
	flex-direction: column;
	margin: 5px;
}

.card-date {
	text-align: right;
	font-size: 12px;
	padding: 5px;
	font-weight: 700;
	border-bottom: 2px solid black;
}
.card-link {
	text-decoration: none;
	color: black;
}

.card-user {
	text-align: left;
	font-size: 15px;
	padding-top: 5px;
	font-weight: 700;
}
.card p {
	line-height: 1.5;
}

.dashboard {
	display: flex;
	flex-wrap: wrap;
	width: 100%;
	height: fit-content;
	justify-content: space-evenly;
	align-items: center;
	flex-direction: column;
}
.dashboard-header {
	margin-bottom: 2%;
	font-weight: 900;
	font-size: 30px;
	display: flex;
	justify-content: center;
	align-items: center;
	text-align: center;
}

.post-title {
	font-weight: 700;
	font-size: 18px;
	display: flex;
	justify-content: flex-start;
	align-items: center;
}

.post-detail {
	display: flex;
	justify-content: flex-start;
	align-items: center;
	font-size: 14px;
}

.strong {
	font-weight: 700;
	font-size: 14px;
}

.comments {
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
	align-items: center;
	width: 100%;
	flex-wrap: wrap;
}

.comment-date {
	font-size: 11px;
	font-weight: bold;
	letter-spacing: 1px;
}

.commentBtn {
	font-size: 14px;
}

.commentTxt {
	width: 100%;
	font-size: 14px;
}

.pageback {
	text-decoration: none;
}

.pageback:hover {
	font-weight: 700;
}

@media screen and (max-width: 375px) {
	.nav-link {
		font-size: 20px;
		padding: 0px;
	}
	.nav-header {
		display: flex;
		justify-content: center;
	}
	.navbar ul {
		display: inline;
		text-align: right;
		padding-right: 20px;
	}
}

